# obsidian-knowledge

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  feature-request.md  pyproject.toml  sync-panic-button.sh  vaults.json
backend/: Dockerfile
backend/app/: config.py  main.py  sync.py  vaults.py
backend/app/api/: admin.py  chat.py  notes.py  vaults.py
backend/app/mcp/: tools.py
backend/app/pipeline/: runner.py
backend/app/search/: client.py  indexer.py
backend/app/vault/: reader.py  writer.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
obsidian-headless/: Dockerfile  pyproject.toml
obsidian-headless/app/: config.py  main.py  sync.py
obsidian-headless/app/vault/: reader.py  writer.py
scripts/: ob-sync.sh
tests/: conftest.py  test_api.py  test_indexer.py  test_integration.py  test_pipeline.py  test_sync.py  test_vault_reader.py  test_vault_writer.py
