[project]
name = "obsidian-headless"
version = "0.1.0"
description = "FastAPI service wrapping Obsidian vault filesystem and ob sync"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-frontmatter>=1.1",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "elastic-apm>=6.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.28",
]
